--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
             </nav>   
         </div>
         <section class="home" id="home">
-            <p>jcdcsdncos</p>
+            <div class="title-skill">
+                <h2>Home</h2>
+                <div class="line-skill"></div>
+            </div>
         </section>
         <section class="about" id="about">
             <div class="title-skill">
@@ -45,11 +48,11 @@
             </div>
             <div class="lalala">
                 <div class="presentation">
-                    <h1>Titulo 1</h1>
-                    <h2>titulo 2</h2>
+                    <h1>Cristian Felipe Girón Vega</h1>
+                    <h2>Full-Stack Programmer</h2>
                     <p class="paragraph-presentation">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis accusantium veritatis, quod aspernatur nobis animi exercitationem, nisi sequi, id ipsum doloribus eveniet consequuntur. Assumenda similique ut voluptatibus tempora atque sed.</p>
                 </div>
-                <div class="photo"><i class="fa-solid fa-user"></i></div>
+                <div class="photo"><img src="images/IMG_20221212_200128.jpg" alt=""></div>
             </div>
         </section>
         <section class="skills" id="skills">
