--- a/mediaQuery.html
+++ b/mediaQuery.html
@@ -9,14 +9,15 @@
 </head>
 <body>
     <nav class="menu">
-        <label class="menu-hamburger">&#9776</label>
-        <ul class="main-menu">
-            <li class="item-menu">Inicio</li>
-            <li class="item-menu">Productos</li>
-            <li class="item-menu">Contáctenos</li>
-            <li class="item-menu">Partners</li>
-            <li class="item-menu">Galería</li>
+        <label class="menu-hamburger" id="menuHamburguesa">&#9776</label>
+        <ul class="main-menu" id="mainMenu">
+            <li class="item">Inicio</li>
+            <li class="item">Productos</li>
+            <li class="item">Contáctenos</li>
+            <li class="item">Partners</li>
+            <li class="item">Galería</li>
         </ul>
     </nav>
+    <script src="js/main.js"></script>
 </body>
 </html>
