--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
                 <div class="lesson-work img8"><a href="Iconos.html"><div class="pspan"><span>Iconos</span></div></a></div>
                 <div class="lesson-work img9"><a href="navSENA.html"><div class="pspan"><span>Menú SENA</span></div></a></div>
                 <div class="lesson-work img10"><a href="mediaQuery.html"><div class="pspan"><span>Media Query</span></div></a></div>
+                <div class="lesson-work img11"><a href="posicionamiento.html"><div class="pspan"><span>Posicionamiento</span></div></a></div>
+                <div class="lesson-work img12"><a href="menuSubitems.html"><div class="pspan"><span>Menú Subitems</span></div></a></div>
             </div>   
         </section>
         <section class="contacts" id="contacts">
