--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="lesson-work img1"><a href = "fuentes.html"><div class="pspan"><span>Fuentes</span></div></a></div>
                 <div class="lesson-work img2"><a href="colores.html"><div class="pspan"><span>Colores</span></div></a></div>
                 <div class="lesson-work img3"><a href="bordes.html"><div class="pspan"><span>Bordes</span></div></a></div>
-                <div class="lesson-work img4"><a href="catalogo.html"><div class="pspan"><span>Catalogo</span></div></a></div>
+                <div class="lesson-work img4"><a href="catalogo.html"><div class="pspan"><span>Catálogo</span></div></a></div>
                 <div class="lesson-work img5"><a href="box-shadow.html"><div class="pspan"><span>Box-Shadow</span></div></a></div>
                 <div class="lesson-work img6"><a href="Tablas.html"><div class="pspan"><span>Tablas</span></div></a></div>
                 <div class="lesson-work img7"><a href="formulario.html"><div class="pspan"><span>Formulario</span></div></a></div>
