--- a/menuSubitems.html
+++ b/menuSubitems.html
@@ -13,13 +13,22 @@
         <!--Menú de primer nivel-->
         <ul>
             <li><a href="#">Inicio</a></li>
-            <li>Sedes
+            <li><a href="#">Sedes</a>
                 <!--Menú de segundo nivel-->
                 <ul>
-                    <li>New York</li>
-                    <li>Dubai</li>
-                    <li>Montañita</li>
-                    <li>Porvenir</li>
+                    <li><a href="#">Tolima</a></li>
+                    <li><a href="#">Caquetá</a></li>
+                    <li><a href="#">Cauca</a></li>
+                    <li><a href="#">Huila</a>
+                        <!--Menú de tercer nivel-->
+                        <ul>
+                            <li><a href="#">Neiva</a></li>
+                            <li><a href="#">Pitalito</a></li>
+                            <li><a href="#">Garzón</a></li>
+                            <li><a href="#">La Plata</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Putumayo</a></li>
                 </ul>
             </li>
             <li><a href="#">Productos</a></li>
