--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
                 <div class="lesson-work img10"><a href="mediaQuery.html"><div class="pspan"><span>Media Query</span></div></a></div>
                 <div class="lesson-work img11"><a href="posicionamiento.html"><div class="pspan"><span>Posicionamiento</span></div></a></div>
                 <div class="lesson-work img12"><a href="menuSubitems.html"><div class="pspan"><span>Menú Subitems</span></div></a></div>
+                <div class="lesson-work img12"><a href="background.html"><div class="pspan"><span>Background</span></div></a></div>
+                <div class="lesson-work img12"><a href=".html"><div class="pspan"><span>Login</span></div></a></div>
             </div>   
         </section>
         <section class="contacts" id="contacts">
