--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset = "UTF-8"> 
         <meta name="viewport" content="width=device-wiath, initial-scale=1.0"> 
-        <title>Mi Portafolio - Cristian Felipe Girón Vega</title>
+        <title>My Portfolio - Cristian Felipe Girón Vega</title>
         <link rel="stylesheet" href="CSS/style.css">
         <link rel="stylesheet" href="icons/all.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,8 +11,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,600&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="top">
+        <div class="top"> 
             <nav class="top-menu">
+                <p>My Portfolio</p>
                 <ul class="ultop-menu">
                     <li class="listtopmenu"><a href="#home">Home</a></li>
                     <li class="listtopmenu"><a href="#about">About</a></li>
@@ -81,20 +82,19 @@
                 <div class="line-skill"></div>
             </div>
             <div class="work2">
-                <div class="lesson-work img1"><a href = "fuentes.html"><div class="pspan"><span>Fuentes</span></div></a></div>
-                <div class="lesson-work img2"><a href="colores.html"><div class="pspan"><span>Colores</span></div></a></div>
-                <div class="lesson-work img3"><a href="bordes.html"><div class="pspan"><span>Bordes</span></div></a></div>
-                <div class="lesson-work img4"><a href="catalogo.html"><div class="pspan"><span>Catálogo</span></div></a></div>
-                <div class="lesson-work img5"><a href="box-shadow.html"><div class="pspan"><span>Box-Shadow</span></div></a></div>
-                <div class="lesson-work img6"><a href="Tablas.html"><div class="pspan"><span>Tablas</span></div></a></div>
-                <div class="lesson-work img7"><a href="formulario.html"><div class="pspan"><span>Formulario</span></div></a></div>
-                <div class="lesson-work img8"><a href="Iconos.html"><div class="pspan"><span>Iconos</span></div></a></div>
-                <div class="lesson-work img9"><a href="navSENA.html"><div class="pspan"><span>Menú SENA</span></div></a></div>
-                <div class="lesson-work img10"><a href="mediaQuery.html"><div class="pspan"><span>Media Query</span></div></a></div>
-                <div class="lesson-work img11"><a href="posicionamiento.html"><div class="pspan"><span>Posicionamiento</span></div></a></div>
-                <div class="lesson-work img12"><a href="menuSubitems.html"><div class="pspan"><span>Menú Subitems</span></div></a></div>
-                <div class="lesson-work img12"><a href="background.html"><div class="pspan"><span>Background</span></div></a></div>
-                <div class="lesson-work img12"><a href=".html"><div class="pspan"><span>Login</span></div></a></div>
+                <a class="lesson-work1" href="fuentes.html"><div class="img1"></div><div><span>Fonts</span></div></a>
+                <a class="lesson-work1" href = "colores.html"><div class="img2"></div><div><span>Colors</span></div></a>
+                <a class="lesson-work1" href="bordes.html"><div class="img3"></div><div><span>Border</span></div></a>
+                <a class="lesson-work1" href="catalogo.html"><div class="img4"></div><div><span>Catalogue</span></div></a>
+                <a class="lesson-work1" href="box-shadow.html"><div class="img5"></div><div><span>Box-Shadow</span></div></a>
+                <a class="lesson-work1" href="Tablas.html"><div class="img6"></div><div><span>Tables</span></div></a>
+                <a class="lesson-work1" href="formulario.html"><div class="img7"></div><div><span>Form</span></div></a>
+                <a class="lesson-work1" href="Iconos.html"><div class="img8"></div><div><span>Icons</span></div></a>
+                <a class="lesson-work1" href="navSENA.html"><div class="img9"></div><div><span>SENA Menu</span></div></a>
+                <a class="lesson-work1" href="mediaQuery.html"><div class="img10"></div><div><span>Media Query</span></div></a>
+                <a class="lesson-work1" href="posicionamiento.html"><div class="img11"></div><div><span>Position</span></div></a>
+                <a class="lesson-work1" href="menuSubitems.html"><div class="img12"></div><div><span>Subitems Menu</span></div></a>
+
             </div>   
         </section>
         <section class="contacts" id="contacts">
@@ -111,7 +111,7 @@
                 <div class="contact-ver"><a href=""></a></div> 
             </div>
             <p class="contact-bottom">cristianf_giron@soy.sena.edu.co</p>
-            <p class="contact-bottom">Cel: 3123028342</p>
+            <p class="contact-bottom">Phone: 3123028342</p>
             <p class="contact-bottom">SENA - Pitalito</p>
         </section>
     </body>
