--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                 <a class="lesson-work1" href="mediaQuery.html"><div class="img10"></div><div><span>Media Query</span></div></a>
                 <a class="lesson-work1" href="posicionamiento.html"><div class="img11"></div><div><span>Position</span></div></a>
                 <a class="lesson-work1" href="menuSubitems.html"><div class="img12"></div><div><span>Subitems Menu</span></div></a>
+                <a class="lesson-work1" href="background.html"><div class="img13"></div><div><span>Background</span></div></a>
 
             </div>   
         </section>
