--- a/background.html
+++ b/background.html
@@ -12,7 +12,7 @@
         <div class="formulario">
             <i class="fuera icon-user1"></i>
             <h1>Iniciar sesion</h1>
-            <div>
+            <div class="lalala">
                 <div class="usuario">
                     <i class="icon-user"></i>
                     <input type="text" placeholder="Usuario" class="inputuser">
@@ -23,6 +23,7 @@
                 </div>
                 <button>Login</button>
             </div>
+            <a href="#"><p>¿Olvidaste tu contraseña?</p></a>
         </div>
     </div>
 </body>
