--- a/background.html
+++ b/background.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="usuario">
                     <i class="icon-board"></i>
-                    <input type="text" placeholder="Contraseña" class="inputpass">
+                    <input type="password" placeholder="Contraseña" class="inputpass">
                 </div>
                 <button>Login</button>
             </div>
