--- a/background.html
+++ b/background.html
@@ -11,7 +11,7 @@
     <div class="img-principal">
         <div class="formulario">
             <i class="fuera icon-user1"></i>
-            <h1>Iniciar sesion</h1>
+            <h1>Iniciar sesión</h1>
             <div class="lalala">
                 <div class="usuario">
                     <i class="icon-user"></i>
@@ -19,7 +19,7 @@
                 </div>
                 <div class="usuario">
                     <i class="icon-board"></i>
-                    <input type="password" placeholder="Contraseña" class="inputpass">
+                    <input type="password" placeholder="Contraseña" class="inputpass" maxlength="15" >
                 </div>
                 <button>Login</button>
             </div>
