Flexbox y cambio pequeño en index para mediaQuery

--- a/background.html
+++ b/background.html
@@ -15,7 +15,7 @@
             <div class="lalala">
                 <div class="usuario">
                     <i class="icon-user"></i>
-                    <input type="text" placeholder="Usuario" class="inputuser">
+                    <input type="text" placeholder="Usuario" class="inputuser" maxlength="25">
                 </div>
                 <div class="usuario">
                     <i class="icon-board"></i>
