--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <a class="lesson-work1" href="posicionamiento.html"><div class="img11"></div><div><span>Position</span></div></a>
                 <a class="lesson-work1" href="menuSubitems.html"><div class="img12"></div><div><span>Subitems Menu</span></div></a>
                 <a class="lesson-work1" href="background.html"><div class="img13"></div><div><span>Background</span></div></a>
-
+                <a class="lesson-work1" href="flexbox.html"><div class="img14"></div><div><span>Flexbox</span></div></a>
             </div>   
         </section>
         <section class="contacts" id="contacts">
