--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                 <a class="lesson-work1" href="menuSubitems.html"><div class="img12"></div><div><span>Subitems Menu</span></div></a>
                 <a class="lesson-work1" href="background.html"><div class="img13"></div><div><span>Background</span></div></a>
                 <a class="lesson-work1" href="flexbox.html"><div class="img14"></div><div><span>Flexbox</span></div></a>
+                <a class="lesson-work1" href="graficoBarras.html"><div class="img15"></div><div><span>Gráfico de barras</span></div></a>
             </div>   
         </section>
         <section class="contacts" id="contacts">
