--- a/graficoBarras.html
+++ b/graficoBarras.html
@@ -24,6 +24,10 @@
         <div class="barra-4"></div>
         <div class="barra-5"></div>
         <div class="barra-6"></div>
+        <div class="barra-3"></div>
+        <div class="barra-4"></div>
+        <div class="barra-5"></div>
+        <div class="barra-6"></div>
     </div>
 </body>
 </html>
