--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li class="listtopmenu"><a href="#home">Home</a></li>
                     <li class="listtopmenu"><a href="#about">About</a></li>
                     <li class="listtopmenu"><a href="#skills">Skills</a></li>
-                    <li class="listtopmenu"><a href="#work">Work</a></li>
+                    <li class="listtopmenu"><a href="#work">Works</a></li>
                     <li class="listtopmenu"><a href="#contacts">Contact</a></li>
                 </ul>
             </nav>
@@ -97,6 +97,8 @@
                 <a class="lesson-work1" href="background.html"><div class="img13"></div><div><span>Background</span></div></a>
                 <a class="lesson-work1" href="flexbox.html"><div class="img14"></div><div><span>Flexbox</span></div></a>
                 <a class="lesson-work1" href="graficoBarras.html"><div class="img15"></div><div><span>Gráfico de barras</span></div></a>
+                <a class="lesson-work1" href="cssgrids.html"><div class="img15"></div><div><span>CSS Grid</span></div></a>
+                <a class="lesson-work1" href="CSSGrid-calendario.html"><div class="img15"></div><div><span>Grid - Calendario</span></div></a>
             </div>   
         </section>
         <section class="contacts" id="contacts">
