--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
                     <i class="fa-brands fa-square-js"></i>
                     <p>JavaScript</p>
                 </div>
+                <div class="box-icon">
+                    <i class="fa-brands fa-php"></i>
+                    <p>PHP</p>
+                </div>
             </div>
         </section>
         <section class="work" id="work">
@@ -97,8 +101,8 @@
                 <a class="lesson-work1" href="background.html"><div class="img13"></div><div><span>Background</span></div></a>
                 <a class="lesson-work1" href="flexbox.html"><div class="img14"></div><div><span>Flexbox</span></div></a>
                 <a class="lesson-work1" href="graficoBarras.html"><div class="img15"></div><div><span>Gráfico de barras</span></div></a>
-                <a class="lesson-work1" href="cssgrids.html"><div class="img15"></div><div><span>CSS Grid</span></div></a>
-                <a class="lesson-work1" href="CSSGrid-calendario.html"><div class="img15"></div><div><span>Grid - Calendario</span></div></a>
+                <a class="lesson-work1" href="cssgrids.html"><div class="img16"></div><div><span>CSS Grid</span></div></a>
+                <a class="lesson-work1" href="CSSGrid-calendario.html"><div class="img17"></div><div><span>Grid - Calendario</span></div></a>
             </div>   
         </section>
         <section class="contacts" id="contacts">
