Maquetacion con Grid

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                 <a class="lesson-work1" href="graficoBarras.html"><div class="img15"></div><div><span>Gráfico de barras</span></div></a>
                 <a class="lesson-work1" href="cssgrids.html"><div class="img16"></div><div><span>CSS Grid</span></div></a>
                 <a class="lesson-work1" href="CSSGrid-calendario.html"><div class="img17"></div><div><span>Grid - Calendario</span></div></a>
+                <a class="lesson-work1" href="maquetacion.html"><div class="img18"></div><div><span>Maquetación</span></div></a>
             </div>   
         </section>
         <section class="contacts" id="contacts">
