Maquetacion con imagenes2

--- a/maquetacion.html
+++ b/maquetacion.html
@@ -6,11 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maquetación</title>
     <link rel="stylesheet" href="CSS/maquetacion.css">
+    <script defer src="js/main.js"></script>
 </head>
 <body>
     <div class="main-content">
-        <nav></nav>
-        <div class="main-img-box">Imagen Principal</div>
+        <nav class="menu">
+            <label class="menu-hamburger" id="menuHamburguesa">&#9776</label>
+            <ul class="main-menu" id="mainMenu">
+                <li class="item">Inicio</li>
+                <li class="item">Productos</li>
+                <li class="item">Contáctenos</li>
+                <li class="item">Partners</li>
+                <li class="item">Galería</li>
+            </ul>
+        </nav>
+        <div class="main-img-box"></div>
         <div class="article-box">
             <div class="article-1">
                 <div class="img-article"></div>
