--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="contact-ver"><a href="https://www.github.com/sircagev"><i class="fa-brands fa-github"></i></a></li>
                     <li class="contact-ver"><a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a></li>
                     <li class="contact-ver"><a href="https://www.twitter.com"><i class="fa-brands fa-twitter"></i></a></li>
-                    <li class="contact-ver"><a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                    <li class="contact-ver"><a href="https://co.linkedin.com/in/cristian-felipe-giron-vega-506024241/"><i class="fa-brands fa-linkedin-in"></i></a></li>
                     <li class="contact-ver"><a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a></li>
                     <li class="contact-ver"><a href=""></a></li>
                 </ul>
