--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <div class="contact-ver"><a href="https://www.github.com/sircagev"><i class="fa-brands fa-github uno"></i></a></div>
                 <div class="contact-ver"><a href="https://www.instagram.com"><i class="fa-brands fa-instagram dos"></i></a></div>
                 <div class="contact-ver"><a href="https://www.twitter.com"><i class="fa-brands fa-twitter tres"></i></a></div>
-                <div class="contact-ver"><a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin-in cuatro"></i></a></div>
+                <div class="contact-ver"><a href="https://co.linkedin.com/in/cristian-felipe-giron-vega-506024241/"><i class="fa-brands fa-linkedin-in cuatro"></i></a></div>
                 <div class="contact-ver"><a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f cinco"></i></a></div>
                 <div class="contact-ver"><a href=""></a></div> 
             </div>
