Conexion con el Index

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                 <a class="lesson-work1" href="CSSGrid-calendario.html"><div class="img17"></div><div><span>Grid - Calendario</span></div></a>
                 <a class="lesson-work1" href="maquetacion.html"><div class="img18"></div><div><span>Maquetación</span></div></a>
                 <a class="lesson-work1" href="slide.html"><div class="img19"></div><div><span>Slide</span></div></a>
+                <a class="lesson-work1" href="pairProgramming.html"><div class="img20"></div><div><span>Pair Programming</span></div></a>
             </div>   
         </section>
         <section class="contacts" id="contacts">
