rEAJUSSTANDO CONEXION css

--- a/pairProgramming.html
+++ b/pairProgramming.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TRABAJO EN EQUIPO</title>
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="./CSS/normalize.css">
+    <link rel="stylesheet" href="./CSS/estilos.css">
 
     <meta name="theme-color" content="#2091F9">
 
