--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                 <a class="lesson-work1" href="maquetacion.html"><div class="img18"></div><div><span>Maquetación</span></div></a>
                 <a class="lesson-work1" href="slide.html"><div class="img19"></div><div><span>Slide</span></div></a>
                 <a class="lesson-work1" href="mercadolibre.html"><div class="img20"></div><div><span>Pair Programming</span></div></a>
+                <a class="lesson-work1" href="carrito.html"><div class="img21"></div><div><span>Carrito</span></div></a>
             </div>   
         </section>
         <section class="contacts" id="contacts">
