Update: Conexion en el index a mercadolibre

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                 <a class="lesson-work1" href="slide.html"><div class="img19"></div><div><span>Slide</span></div></a>
                 <a class="lesson-work1" href="mercadolibre.html"><div class="img20"></div><div><span>Pair Programming</span></div></a>
                 <a class="lesson-work1" href="carrito.html"><div class="img21"></div><div><span>Carrito</span></div></a>
+                <a class="lesson-work1" href="mercadoLibre2.html"><div class="img22"></div><div><span>Mercadolibre</span></div></a>
             </div>   
         </section>
         <section class="contacts" id="contacts">
