--- a/mercadolibre2.html
+++ b/mercadolibre2.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="CSS/mercadolibre2.css">
-    <script src="https://kit.fontawesome.com/4a8e26ddd0.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="icons/all.css">
+    <!-- <script src="https://kit.fontawesome.com/4a8e26ddd0.js" crossorigin="anonymous"></script> -->
 </head>
 <body>
     <header>
