--- a/mercadolibre2.html
+++ b/mercadolibre2.html
@@ -27,6 +27,8 @@
         </div>
     </header>
     <div id="mainContent"></div>
+    <div id="left"></div>
+    <div id="rigth"></div>
     <script src="js/mercadoLibre.js"></script>
 </body>
 </html>
