chore: add filter

--- a/mercadolibre2.html
+++ b/mercadolibre2.html
@@ -26,9 +26,9 @@
             <i class="fa-solid fa-cart-shopping"></i>
         </div>
     </header>
-    <div id="mainContent"></div>
-    <div id="left"></div>
-    <div id="rigth"></div>
+    <div id="mainContent">
+        <div id="boxProductos" class="box-productos"></div>
+    </div>
     <script src="js/mercadoLibre.js"></script>
 </body>
 </html>
