--- a/mercadolibre2.html
+++ b/mercadolibre2.html
@@ -26,7 +26,10 @@
             <i class="fa-solid fa-cart-shopping"></i>
         </div>
     </header>
-    <div id="mainContent">
+    <div id="mainContent" class="main-content">
+        <div id="boxFiltro" class="box-filtro">
+            <div class="box-toggle box-toggle-on"></div>
+        </div>
         <div id="boxProductos" class="box-productos"></div>
     </div>
     <script src="js/mercadoLibre.js"></script>
