--- a/mercadolibre2.html
+++ b/mercadolibre2.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mercadolibre</title>
     <link rel="stylesheet" href="CSS/mercadolibre2.css">
     <link rel="stylesheet" href="icons/all.css">
-    <!-- <script src="https://kit.fontawesome.com/4a8e26ddd0.js" crossorigin="anonymous"></script> -->
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -27,11 +28,14 @@
         </div>
     </header>
     <div id="mainContent" class="main-content">
-        <div id="boxFiltro" class="box-filtro">
-            <div class="box-toggle box-toggle-on"></div>
+        <div id="boxFiltro" class="box-filtro"></div>
+        <div class="box-toggle box-toggle-on">
+            <div class="box-toggle-on"></div>
         </div>
+
         <div id="boxProductos" class="box-productos"></div>
     </div>
     <script src="js/mercadoLibre.js"></script>
 </body>
+
 </html>
