--- a/mercadolibre2.html
+++ b/mercadolibre2.html
@@ -29,12 +29,12 @@
     </header>
     <div id="mainContent" class="main-content">
         <div id="boxFiltro" class="box-filtro"></div>
-        <div class="box-toggle box-toggle-on">
-            <div class="box-toggle-on"></div>
+        <div id="boxToggle" class="box-toggle box-toggle-off">0
+            <div id="buttonToggle" class="button-toggle button-toggle-off"></div>
         </div>
-
         <div id="boxProductos" class="box-productos"></div>
     </div>
+    
     <script src="js/mercadoLibre.js"></script>
 </body>
 
