--- a/mercadolibre2.html
+++ b/mercadolibre2.html
@@ -32,9 +32,16 @@
         <div id="boxToggle" class="box-toggle box-toggle-off">0
             <div id="buttonToggle" class="button-toggle button-toggle-off"></div>
         </div>
-        <div id="boxProductos" class="box-productos"></div>
+        <div class="filtros filtros-visibles">
+            <div class="filtros">
+                <div class="filtro-modelo"></div>
+                <div class="filtro-anyo"></div>
+                <div class="filtro-ubicacion"></div>
+                div.
+            </div>
+        </div>
     </div>
-    
+    <div id="boxProductos" class="box-productos"></div>
     <script src="js/mercadoLibre.js"></script>
 </body>
 
