--- a/mercadolibre2.html
+++ b/mercadolibre2.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercadolibre</title>
     <link rel="stylesheet" href="CSS/mercadolibre2.css">
+
     <link rel="stylesheet" href="icons/all.css">
 </head>
-
 <body>
     <header>
         <div class="logo">
@@ -28,16 +27,20 @@
         </div>
     </header>
     <div id="mainContent" class="main-content">
-        <div id="boxFiltro" class="box-filtro"></div>
-        <div id="boxToggle" class="box-toggle box-toggle-off">0
-            <div id="buttonToggle" class="button-toggle button-toggle-off"></div>
+        <div class="sub-header">
+            <div class="filtros filtros-visible">
+                <div class="filtro">
+                    <div class="filtro-modelo"></div>
+                    <div class="filtro-anyo"></div>
+                    <div class="filtro-ubicacion"></div>
+                    <div class="condicion"></div>
+                    <div class="precio"></div>
+                </div>
+            </div>
         </div>
-        <div class="filtros filtros-visibles">
-            <div class="filtros">
-                <div class="filtro-modelo"></div>
-                <div class="filtro-anyo"></div>
-                <div class="filtro-ubicacion"></div>
-                div.
+        <div id="boxFiltro" class="box-filtro">
+            <div id="boxToggle" class="box-toggle box-toggle-off">
+                <div id="buttonToggle" class="button-toggle button-toggle-off"></div>
             </div>
         </div>
     </div>
