update: Corrigiendo errores y cambios

--- a/mercadolibre2.html
+++ b/mercadolibre2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
 
     <link rel="stylesheet" href="icons/all.css">
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -27,24 +29,22 @@
         </div>
     </header>
     <div id="mainContent" class="main-content">
-        <div class="sub-header">
+        <div id="boxFiltro" class="box-filtro">
+            <div id="boxToggle" class="box-toggle box-toggle-off">
+                <div id="buttonToggle" class="button-toggle button-toggle-off"></div>
+            </div>
             <div class="filtros filtros-visible">
                 <div class="filtro">
                     <div class="filtro-modelo"></div>
                     <div class="filtro-anyo"></div>
                     <div class="filtro-ubicacion"></div>
-                    <div class="condicion"></div>
-                    <div class="precio"></div>
+                    <div class="filtro-condicion"></div>
+                    <div class="filtro-precio"></div>
                 </div>
             </div>
         </div>
-        <div id="boxFiltro" class="box-filtro">
-            <div id="boxToggle" class="box-toggle box-toggle-off">
-                <div id="buttonToggle" class="button-toggle button-toggle-off"></div>
-            </div>
-        </div>
+        <div id="boxProductos" class="box-productos"></div>
     </div>
-    <div id="boxProductos" class="box-productos"></div>
     <script src="js/mercadoLibre.js"></script>
 </body>
 
