update: estrellas en mercadolibre

--- a/mercadolibre3.html
+++ b/mercadolibre3.html
@@ -42,6 +42,29 @@
         
         <div id="boxProductos" class="box-productos"></div>
     </div>
+
+    <div class="stars-center">
+        <div class="stars-wrap">
+            <div class="stars">
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+            </div> <br>
+        </div>
+    </div>
+    <div class="input-wrap">
+        <div class="input-con">
+            <input type="number" id="ratingInput">
+        </div>
+    </div>
+    <div class="btn-wrap">
+        <div class="btn-calificar">
+            <input type="submit" value="Calificar" id="calificarBtn">
+        </div>
+    </div>
+
     <script src="./js/mercadoLibre3.js"></script>
 </body>
 </html>
