update: changes en mercadolibre

--- a/mercadolibre3.html
+++ b/mercadolibre3.html
@@ -43,25 +43,19 @@
         <div id="boxProductos" class="box-productos"></div>
     </div>
 
-    <div class="stars-center">
-        <div class="stars-wrap">
+    <div class="stars-calification">
+        <div class="">
             <div class="stars">
                 <i class="fa-regular fa-star"></i>
                 <i class="fa-regular fa-star"></i>
                 <i class="fa-regular fa-star"></i>
                 <i class="fa-regular fa-star"></i>
                 <i class="fa-regular fa-star"></i>
-            </div> <br>
+            </div>
         </div>
-    </div>
-    <div class="input-wrap">
-        <div class="input-con">
-            <input type="number" id="ratingInput">
-        </div>
-    </div>
-    <div class="btn-wrap">
-        <div class="btn-calificar">
-            <input type="submit" value="Calificar" id="calificarBtn">
+        <div class="calificaction">
+            <input type="number" id="inputCalification" max="5" min="0">
+            <input type="submit" id="btnCalificar">
         </div>
     </div>
 
