--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                 <a class="lesson-work1" href="mercadolibre.html"><div class="img20"></div><div><span>Pair Programming</span></div></a>
                 <a class="lesson-work1" href="carrito.html"><div class="img21"></div><div><span>Carrito</span></div></a>
                 <a class="lesson-work1" href="mercadolibre3.html"><div class="img22"></div><div><span>Mercadolibre</span></div></a>
+                <a class="lesson-work1" href="amazon.html"><div class="img22"></div><div><span>Amazon</span></div></a>
             </div>   
         </section>
         <section class="contacts" id="contacts">
